--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div id="mapid" style="width: 100%; height: 600px"></div>
+    <button id="btnCurLocation" onClick="setCurLocation()">現在地を表示</button>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script>
       var map = L.map('mapid').setView([41.768671,140.728962], 15);
@@ -20,6 +21,25 @@
         attribution: "© <a href='https://www.openstreetmap.org/copyright'>OpenStreetMap</a> contributors"
       });
       osm.addTo(map);
+      function setCurLocation(){
+        if (navigator.geolocation == false){
+          alert('現在地を取得できませんでした。');
+          return;
+        }
+ 
+        function success(e) {
+          var lat  = e.coords.latitude;
+          var lng = e.coords.longitude;
+          mymap.setView([lat, lng], 15);
+          L.marker([lat,lng]).addTo(mymap).bindPopup('現在地').openPopup();
+        };
+ 
+        function error() {
+          alert('現在地を取得できませんでした。');
+        };
+ 
+        navigator.geolocation.getCurrentPosition(success, error);
+      }
       </script>
   </body>
 </html>
