--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         function success(e) {
           var lat  = e.coords.latitude;
           var lng = e.coords.longitude;
-          mymap.setView([lat, lng], 15);
-          L.marker([lat,lng]).addTo(mymap).bindPopup('現在地').openPopup();
+          map.setView([lat, lng], 15);
+          L.marker([lat,lng]).addTo(map).bindPopup('現在地').openPopup();
         };
  
         function error() {
