--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <div id="mapid" style="width: 100%; height: 85vh"></div>
     <button id="btnCurLocation" onClick="setCurLocation()">現在地を表示</button>
+    <a href="timeline.html">チャートへ</a>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="plugin/L.Icon.Pulse.js"></script>
     <script src="plugin/leaflet.icon-material.js"></script>
