--- a/timeline.html
+++ b/timeline.html
@@ -67,10 +67,28 @@
         background-color:papayawhip;
         height:4vh;
       }
+      a.btn_04 {
+        text-align: center;
+        vertical-align: middle;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding: 0.1rem 0.5rem;
+        font-weight: bold;
+        border: 2px solid #27acd9;
+        background: #27acd9;
+        color: #fff;
+        border-radius: 2vh;
+        transition: 0.5s;
+      }
+      a.btn_04:hover {
+        color: #27acd9;
+        background: #fff;
+      }
     </style>
   </head>
   <body>
-    <a href="index.html">地図に戻る</a>
+    <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
     <script>
       
