--- a/QR.html
+++ b/QR.html
@@ -6,6 +6,7 @@
     <title>QRコード</title>
 </head>
 <body>
-    <img src="images/QR_050324.png" alt="">
+    <p><a href="index.html">地図へ戻る</a></p>
+    <img src="images/QR_050324.png" alt="QRcode">
 </body>
 </html>
