--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         vertical-align: middle;
         text-decoration: none;
         margin-top: 10px;
-        padding: 0.1rem 2rem;
+        padding: 0.1rem 0.5rem;
         font-weight: bold;
         border: 2px solid #27acd9;
         background: #27acd9;
         color: #fff;
-        border-radius: 10vh;
+        border-radius: 1vh;
         transition: 0.5s;
       }
       a.btn_04:hover {
@@ -42,7 +42,7 @@
     <div id="mapid" style="width: 100%; height: 85vh; margin-bottom: 10px;"></div>
     <a href="javascript:setCurLocation()" class="btn_04">現在地</a>
     <a href="timeline.html" class="btn_04">チャートへ</a>
-    <a href="" class="btn_04">QRコード</a>
+    <a href="QR.html" class="btn_04">QRコード</a>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="plugin/L.Icon.Pulse.js"></script>
     <script src="plugin/leaflet.icon-material.js"></script>
