--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <title>函館マラソンマップ</title>
   </head>
   <body>
-    <div id="mapid" style="width: 100%; height: 85vh; margin-bottom: 10px;"></div>
     <a href="javascript:setCurLocation()" class="btn_04">現在地</a>
     <a href="timeline.html" class="btn_04">チャートへ</a>
     <a href="QR.html" class="btn_04">QRコード</a>
+    <div id="mapid" style="width: 100%; height: 85vh; margin-top: 10px;"></div>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="plugin/L.Icon.Pulse.js"></script>
     <script src="plugin/leaflet.icon-material.js"></script>
