--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
     <a href="javascript:setCurLocation()" class="btn_04">現在地</a>
     <a href="timeline.html" class="btn_04">チャートへ</a>
-    <a href="QR.html" class="btn_04">QRコード</a>
+    <a href="usage.html" class="btn_04">使い方</a>
     <div id="mapid" style="width: 100%; height: 85vh; margin-top: 10px;"></div>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="plugin/L.Icon.Pulse.js"></script>
