--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
 
         navigator.geolocation.getCurrentPosition(success, error);
       }
+
+      const url = new URL(window.location.href);
+      console.log(url.href); // https://example.com
+      const area = url.searchParams.get('area');
+      console.log(area);
+      if(area != null){
+        map.setView([41.775792, 140.772275], 15);
+            
+      };
+
     </script>
   </body>
 </html>
