--- a/timeline.html
+++ b/timeline.html
@@ -90,7 +90,21 @@
   <body>
     <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
-    <a href="index.html?area=area1">1</a>
+    <div>
+      <a href="index.html?area=area1-1">1-1</a>
+      <a href="index.html?area=area1-1">1-2</a>
+      <a href="index.html?area=area2">2</a>
+      <a href="index.html?area=area3">3</a>
+      <a href="index.html?area=area4">4</a>
+      <a href="index.html?area=area5">5</a>
+      <a href="index.html?area=area6">6</a>
+      <a href="index.html?area=area7">7</a>
+      <a href="index.html?area=area8">8</a>
+      <a href="index.html?area=area9">9</a>
+      <a href="index.html?area=area10">10</a>
+      <a href="index.html?area=area11">11</a>
+      <a href="index.html?area=area12">12</a>
+    </div>
     <script>
       
       for (let i = 0; i < items.length; i++) {
