--- a/timeline.html
+++ b/timeline.html
@@ -85,12 +85,20 @@
         color: #27acd9;
         background: #fff;
       }
+      div.btn a {
+        display: inline-block;
+        padding: 0.2rem;
+        
+        color: #fff;
+        border: 1px solid #27acd9;
+        background: #27acd9;
+      }
     </style>
   </head>
   <body>
     <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
-    <div>
+    <div class="btn">
       <a href="index.html?area=area1-1">1-1</a>
       <a href="index.html?area=area1-2">1-2</a>
       <a href="index.html?area=area2">2</a>
