--- a/timeline.html
+++ b/timeline.html
@@ -13,59 +13,59 @@
     <style>
       .area1{
         background-color: gray;
-        height:4vh;
+        color: #000;
       }
       .area2{
         background-color: lightgreen;
-        height:4vh;
+        color: #000;
       }
       .area3{
         background-color: blue;
-        height:4vh;
+        color: #fff;
       }
       .area4{
         background-color: green;
-        height:4vh;
+        color: #fff;
       }
       .area5{
         background-color: brown;
-        height:4vh;
+        color: #fff;
       }
       .area6{
         background-color:orange;
-        height:4vh;
+        color: #fff;
       }
       .area7{
         background-color:pink;
-        height:4vh;
+        color: #000;
       }
       .area8{
         background-color:purple;
-        height:4vh;
+        color: #fff;
       }
       .area9{
         background-color:yellow;
-        height:4vh;
+        color: #000;
       }
       .area10{
         background-color:skyblue;
-        height:4vh;
+        color: #000;
       }
       .area11{
         background-color:burlywood;
-        height:4vh;
+        color: #000;
       }
       .area12{
         background-color: crimson;
-        height:4vh;
+        color: #fff;
       }
       .area345{
         background-color: whitesmoke;
-        height:4vh;
+        color: #000;
       }
       .area67{
         background-color:papayawhip;
-        height:4vh;
+        color: #000;
       }
       a.btn_04 {
         text-align: center;
@@ -89,9 +89,8 @@
         display: inline-block;
         padding: 0.2rem;
         
-        color: #fff;
-        border: 1px solid #27acd9;
-        background: #27acd9;
+
+        border: 1px solid #000;
       }
     </style>
   </head>
@@ -99,19 +98,19 @@
     <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
     <div class="btn">
-      <a href="index.html?area=area1-1">1-1</a>
-      <a href="index.html?area=area1-2">1-2</a>
-      <a href="index.html?area=area2">2</a>
-      <a href="index.html?area=area3">3</a>
-      <a href="index.html?area=area4">4</a>
-      <a href="index.html?area=area5">5</a>
-      <a href="index.html?area=area6">6</a>
-      <a href="index.html?area=area7">7</a>
-      <a href="index.html?area=area8">8</a>
-      <a href="index.html?area=area9">9</a>
-      <a href="index.html?area=area10">10</a>
-      <a href="index.html?area=area11">11</a>
-      <a href="index.html?area=area12">12</a>
+      <a href="index.html?area=area1-1" class="area1">1-1</a>
+      <a href="index.html?area=area1-2" class="area1">1-2</a>
+      <a href="index.html?area=area2" class="area2">2</a>
+      <a href="index.html?area=area3" class="area3">3</a>
+      <a href="index.html?area=area4" class="area4">4</a>
+      <a href="index.html?area=area5" class="area5">5</a>
+      <a href="index.html?area=area6" class="area6">6</a>
+      <a href="index.html?area=area7" class="area7">7</a>
+      <a href="index.html?area=area8" class="area8">8</a>
+      <a href="index.html?area=area9" class="area9">9</a>
+      <a href="index.html?area=area10" class="area10">10</a>
+      <a href="index.html?area=area11" class="area11">11</a>
+      <a href="index.html?area=area12" class="area12">12</a>
     </div>
     <script>
       
