エリアリンクの説明追加

--- a/usage.html
+++ b/usage.html
@@ -38,6 +38,9 @@
         チャートの中で左右にピンチイン・アウトをするとチャートの拡大縮小ができます。
         左右にフリックすると時間を進めたり戻したりして見ることができます。
     </p>
+    <p>
+        一番下にエリアの場所に飛ぶリンクがあります。エリア番号を押してください。
+    </p>
     <h2>QRコード</h2>
     <p>
         以下のQRコードはこのサイトのURLです。
@@ -46,5 +49,6 @@
     <img src="images/QR_050324.png" alt="QRcode">
 
     <p><a href="index.html">地図へ戻る</a></p>
+    <p style="font-size: small; color: gray; text-align: right;">2023 MBTボランティア作成</p>
 </body>
 </html>
