iphoneでtooltipが表示されないことを修正

--- a/timeline.html
+++ b/timeline.html
@@ -86,6 +86,7 @@
         background: #fff;
       }
       div.btn a {
+        margin-top: 5px;
         display: inline-block;
         padding: 0.2rem;
         
@@ -94,7 +95,7 @@
       }
     </style>
   </head>
-  <body>
+  <body ontouchstart=""><!-- ontouchstart 属性を追加 -->
     <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
     <div class="btn">
