--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 
     <title>函館マラソンマップ</title>
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G65JQ0TRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8G65JQ0TRQ');
+</script>
   <body>
     <a href="javascript:setCurLocation()" class="btn_04">現在地</a>
     <a href="timeline.html" class="btn_04">チャートへ</a>
