--- a/usage.html
+++ b/usage.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>使い方</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G65JQ0TRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8G65JQ0TRQ');
+</script>
 <body>
     <p><a href="index.html">地図へ戻る</a></p>
     <h2>地図画面</h2>
     <p>地図はOpenStreetMapを使用しています。
         GoogleMapと比べると目標等が少ないですがサイトに掲載することに制限がありません。
         見慣れないかもしれませんがご了承ください。
-    </p>
-    <p>
-        マーカーの位置は作者が地図上で見当をつけて置きました。
-        正確ではないと思われますので目安にしてください。
     </p>
     <p>
         現在地ボタンを押すと地図上に現在地を表示します。
@@ -39,7 +44,7 @@
         左右にフリックすると時間を進めたり戻したりして見ることができます。
     </p>
     <p>
-        一番下にエリアの場所に飛ぶリンクがあります。エリア番号を押してください。
+        一番下にエリアの地図に飛ぶリンクがあります。エリア番号を押してください。
     </p>
     <h2>QRコード</h2>
     <p>
@@ -47,7 +52,12 @@
         他の人に教えるときに使用してください。
     </p>
     <img src="images/QR_050324.png" alt="QRcode">
-
+    <h2>注意</h2>
+    <p>
+        このサイトは実行委員会等の公式ではありません。
+        マーカーの位置等は作者が地図上で見当をつけて置いています。
+        正確な位置ではないと思いますので目安にしてください。
+    </p>
     <p><a href="index.html">地図へ戻る</a></p>
     <p style="font-size: small; color: gray; text-align: right;">2023 MBTボランティア作成</p>
 </body>
