--- a/timeline.html
+++ b/timeline.html
@@ -95,6 +95,15 @@
       }
     </style>
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G65JQ0TRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8G65JQ0TRQ');
+</script>
   <body ontouchstart=""><!-- ontouchstart 属性を追加 -->
     <a href="index.html" class="btn_04">地図に戻る</a>
     <div id="visualization"></div>
