--- a/timeline.html
+++ b/timeline.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <link
       rel="stylesheet"
       href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css"
