--- a/usage.html
+++ b/usage.html
@@ -41,8 +41,15 @@
         すべての隊が一画面に表示できないかもしれません。上下にスクロールしてください。
     </p>
     <p>
-        チャートの中で左右にピンチイン・アウトをするとチャートの拡大縮小ができます。
+        左右にピンチイン・アウトをするとチャートの拡大縮小ができます。
         左右にフリックすると時間を進めたり戻したりして見ることができます。
+    </p>
+    <p>
+        チャートをタップすると「開始時刻～終了時刻」がポップアップする想定ですがiPhoneでは表示されないかもしれません。
+        中にエリア名と時刻を表示するようにしました。（拡大しないと表示されないと思います）
+    </p>
+    <p>
+        現在時刻（ページを読み込んだ時刻）が赤いラインで表示されます。
     </p>
     <p>
         一番下にエリアの地図に飛ぶリンクがあります。エリア番号を押してください。
