--- a/usage.html
+++ b/usage.html
@@ -59,7 +59,7 @@
         以下のQRコードはこのサイトのURLです。
         他の人に教えるときに使用してください。
     </p>
-    <img src="images/QR_050324.png" alt="QRcode">
+    <img src="images/2024.png" alt="QRcode">
     <h2>注意</h2>
     <p>
         このサイトは実行委員会等の公式ではありません。
