--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
     </style>
 
-    <title>函館マラソンマップ</title>
+    <title>函館マラソン2024マップ</title>
   </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8G65JQ0TRQ"></script>
